# voxtype

./: Cargo.toml  README.md
src/: main.rs  model_manager.rs
src/output/: ydotool.rs
src/transcribe/: mod.rs  remote.rs  whisper.rs
src/vad/: mod.rs
